overflow problem solved

--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@
     justify-content: center;
     align-items: center;
 }
+h1{
+    font-size:xx-large;
+    color:lawngreen;
+}
 .calculator {
     height: fit-content;
     padding-left: 10px;
@@ -28,6 +32,7 @@
     align-items: center;
     font-size: 1.5rem;
     font-weight: 700;
+    overflow-x:hidden;
 }
 .button-postion{
     display: flex;
